# machineLearning_linearRegression

./: app.py  pyproject.toml  testes.ipynb
